# api/controllers/AccountStatementController.js
@@ -1,0 +1,15 @@
+/**
+ * Account_statementController.js
+ *
+ * @description :: Server-side logic for managing [account_statement] table or entity
+ *
+ * @author      ::  Zynobot
+ * @help        :: See http://sailsjs.org/#!/documentation/concepts/Controllers
+ *
+ * Created at   :: Tue Mar 15 2022 20:32:04 GMT-0400 (Eastern Daylight Time)
+ * Modified at  :: Tue Mar 15 2022 20:32:04 GMT-0400 (Eastern Daylight Time)
+ */
+
+module.exports = {
+    
+};
